[gd_scene load_steps=9 format=3 uid="uid://daty4aphomuh4"]

[ext_resource type="Script" path="res://src/main/component/Scripts/enemy_base.gd" id="1_lkhbt"]
[ext_resource type="Script" path="res://src/main/common/classes/HitBox.gd" id="2_yfjr8"]
[ext_resource type="Script" path="res://src/main/common/classes/HurtBox.gd" id="3_btl2e"]
[ext_resource type="Script" path="res://src/main/common/classes/StateMachine.gd" id="4_m830w"]
[ext_resource type="Script" path="res://src/main/common/classes/EnemyStats.gd" id="5_ia363"]
[ext_resource type="Texture2D" uid="uid://d3140f2xn3t1j" path="res://src/main/assets/packs/32X32/Legacy-Fantasy - High Forest 2.3/HUD/Base-01.png" id="6_n2ivv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o8l4w"]
atlas = ExtResource("6_n2ivv")
region = Rect2(307, 6, 58, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_10ee8"]
atlas = ExtResource("6_n2ivv")
region = Rect2(308, 71, 56, 2)

[node name="EnemyBase" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_lkhbt")

[node name="EnemyStats" type="Node" parent="."]
script = ExtResource("5_ia363")

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]

[node name="HitBox" type="Area2D" parent="Graphics"]
collision_layer = 0
collision_mask = 8
script = ExtResource("2_yfjr8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HitBox"]
debug_color = Color(0.968627, 0, 0.454902, 0.419608)

[node name="HurtBox" type="Area2D" parent="Graphics"]
collision_layer = 16
collision_mask = 0
script = ExtResource("3_btl2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HurtBox"]
debug_color = Color(0, 0.643137, 0.301961, 0.419608)

[node name="DamageNumberMarker2D" type="Marker2D" parent="Graphics"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_m830w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="FreezingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FreezingCooldownTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -29.0
offset_top = -20.0
offset_right = 29.0
offset_bottom = 20.0
max_value = 1.0
step = 0.01
value = 1.0
texture_under = SubResource("AtlasTexture_o8l4w")
texture_progress = SubResource("AtlasTexture_10ee8")
texture_progress_offset = Vector2(1, 1)

[connection signal="hurt" from="Graphics/HurtBox" to="." method="_on_hurt_box_hurt"]
